# Stackainer

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pdm.toml  CHANGELOG.md  CONTRIBUTING.md  LICENCE.md  Makefile  README.md  index.html  pyproject.toml
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docs/: _coverpage.md  _sidebar.md  database.md  ideas.md  resources.md  script.md  stack.md  tutorial.md
docs/interfaces/: api.md  cli.md
docs/tutorials/: getting-started.md  new-service.md
docsify/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
src/: README.md  db.py  models.py  stack.py  stackainer.py  update.py  utils.py
src/assets/management/portainer/docker/: .env.sample  compose.yml
src/port/management/portainer/: docker-compose.yml
src/stackainer/: __main__.py  main.py
src/stackainer/cli/: dev.py  main.py  stack.py
src/stackainer/commands/: dev.py
src/stackainer/config/database/: json.py
src/stackainer/constants/: files.py  regex.py
src/stackainer/models/: database.py  parameters.py  service.py
src/stackainer/repositories/: assets.py  stack.py
src/stackainer/services/: assets.py  docker.py  env.py  file.py  io.py  stack.py
src/stackainer/utils/: wrapper.py
src/traefik/: down.sh
stack/management/portainer/: .env.default  docker-compose.yml
stack/port/: up.sh
stack/port/management/duplicati/: docker-compose.yml
stack/traefik/: up.sh
tools/: git.sh
