[project]
name = "stackainer"
version = "1.0.0"
description = "Manage Docker Stack and Services"
authors = [
    {name = "ProgOwer", email = "ProgOwer0770@gmail.com"},
]
dependencies = [
    "typer[all]>=0.7.0",
    "asyncio>=3.4.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
]
[tool.pdm.scripts]
stackainer = { call = "src.stackainer.main:app" }

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
